# lab-system

./: .gitignore  .gitmodules  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  SETUP_SUMMARY.md  deploy_to_rpi.sh  env.example  lab-agent.service  start_orchestrator.sh  test_system.py
device-agent/: config.yaml.example  pyproject.toml
device-agent/src/lab_agent/: __init__.py  agent.py  base.py  common.py
docs/: api.md  architecture.md  deployment.md  development.md  mqtt.md  troubleshooting.md
features/modules/ndi/: manifest.yaml  ndi_module.py
features/plugins/ndi/: manifest.yaml  ndi_plugin.py
infra/: docker-compose.yaml
infra/orchestrator/: Dockerfile  pyproject.toml
infra/orchestrator/src/lab_orchestrator/: __init__.py  config.py  host.py  plugin_api.py
infra/orchestrator/src/lab_orchestrator/services/: __init__.py  events.py  mqtt.py  registry.py  scheduler.py
infra/orchestrator/src/lab_orchestrator/ui/: __init__.py
infra/orchestrator/src/lab_orchestrator/ui/templates/: base.html  devices.html  index.html  ndi.html  plugin_shell.html
shared/: feature_readiness.py  readiness_base.py
